--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "aqua",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./dist/main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/electron": "^1.6.10",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
-    "css-loader": "^3.6.0",
-    "electron": "^9.0.5",
-    "html-webpack-plugin": "^4.3.0",
-    "prettier": "^2.0.5",
-    "prettier-plugin-organize-imports": "^1.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.5",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  }
+    "name": "aqua",
+    "version": "0.1.0",
+    "description": "A text editor for the Rust programming language",
+    "main": "./dist/main.js",
+    "scripts": {
+        "start": "electron .",
+        "webpack-dev": "webpack -w"
+    },
+    "keywords": [],
+    "author": "Felipe Soares Gonçalves Rosa",
+    "license": "MIT",
+    "dependencies": {
+        "electron": "^9.0.5",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
+    },
+    "devDependencies": {
+        "@types/electron": "^1.6.10",
+        "@types/react": "^16.9.41",
+        "@types/react-dom": "^16.9.8",
+        "css-loader": "^3.6.0",
+        "html-webpack-plugin": "^4.3.0",
+        "prettier": "^2.0.5",
+        "prettier-plugin-organize-imports": "^1.1.0",
+        "style-loader": "^1.2.1",
+        "ts-loader": "^7.0.5",
+        "tslint": "^6.1.2",
+        "typescript": "^3.9.5",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12"
+    }
 }
