--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "./dist/main.js",
     "scripts": {
         "start": "electron .",
-        "webpack-dev": "webpack -w"
+        "test": "jest",
+        "build:dev": "webpack -w"
     },
     "keywords": [],
     "author": "Felipe Soares Gonçalves Rosa",
@@ -17,13 +18,16 @@
     },
     "devDependencies": {
         "@types/electron": "^1.6.10",
+        "@types/jest": "^26.0.5",
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
         "css-loader": "^3.6.0",
         "html-webpack-plugin": "^4.3.0",
+        "jest": "^26.1.0",
         "prettier": "^2.0.5",
         "prettier-plugin-organize-imports": "^1.1.0",
         "style-loader": "^1.2.1",
+        "ts-jest": "^26.1.3",
         "ts-loader": "^7.0.5",
         "tslint": "^6.1.2",
         "typescript": "^3.9.5",
