--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,36 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
+  node: circleci/node@3.0.1
+  codecov: codecov/codecov@1.0.2
 jobs:
   build-and-test:
     executor:
       name: node/default
+      tag: '14.4.0'
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
+      - node/install-packages
+      - run:
+          name: "Lint"
+          command: npm run lint:ci
+      - run:
+          name: "Test"
+          command: npm run test:ci
+          environment:
+            JEST_JUNIT_OUTPUT_DIR: reports/junit
+            JEST_JUNIT_OUTPUT_NAME: junit.xml
+      - run:
+          command: echo 1
+      - store_test_results:
+          path: reports/junit
+      - store_artifacts:
+          path: reports/junit
+      - store_artifacts:
+          path: reports/coverage
+      - codecov/upload:
+          file: reports/coverage/coverage-final.json
+
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  build-and-test:
+    jobs:
+      - build-and-test
